// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RebuildIndexError should render extra text when error is 'There are unverified OTUs' 1`] = `
<Alert
  color="red"
>
  <span>
    <strong>
      There are unverified OTUs
      .
    </strong>
    <span>
       Fix the unverified OTUs before rebuilding the index.
    </span>
  </span>
</Alert>
`;

exports[`RebuildIndexError should render nothing when error is falsey 1`] = `""`;

exports[`RebuildIndexError should render plain error 1`] = `
<Alert
  color="red"
>
  <span>
    <strong>
      Index is foobar
    </strong>
  </span>
</Alert>
`;
